[gd_scene load_steps=7 format=3 uid="uid://ds480o8a4txxd"]

[ext_resource type="Script" path="res://scripts/drops/potion_green.gd" id="1_ojemw"]
[ext_resource type="Texture2D" uid="uid://byyelrsa5680u" path="res://assets/objects/Skip_PocionVerde.png" id="1_y14gl"]
[ext_resource type="AudioStream" uid="uid://brw5xsjtpb2hs" path="res://sound/sfx/Fx_BubbleExplotion4.wav" id="3_qvd5d"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3puco"]
radius = 34.0
height = 88.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_p6tig"]
radius = 45.0
height = 108.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_lc5t7"]
random_pitch = 1.5
streams_count = 1
stream_0/stream = ExtResource("3_qvd5d")

[node name="Potion_Green" type="StaticBody2D"]
script = ExtResource("1_ojemw")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_y14gl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_3puco")

[node name="Area2D" type="Area2D" parent="."]

[node name="HitBox" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CapsuleShape2D_p6tig")

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="SFX_Pops" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_lc5t7")
volume_db = -10.0
bus = &"SFX"

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
